objects/npsp__DataImportBatch__c.object
<CustomObject>
    <fields>
        <fullName>npsp__Account_Custom_Unique_ID__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>An optional Unique Id field to use for Organization Account matching</description>
        <inlineHelpText>An optional Unique Id field to use for Organization Account matching</inlineHelpText>
        <label>Account Custom Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Active_Fields__c</fullName>
        <description>Represents the data model of active fields for a NPSP_DataImportBatch__c record. Not intended for direct customer use and should not be edited directly.</description>
        <label>Active Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Allow_Recurring_Donations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Recurring Donations are availabe in this Batch.</description>
        <inlineHelpText>Indicates if Recurring Donations are availabe in this Batch.</inlineHelpText>
        <label>Allow Recurring Donations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Batch_Defaults__c</fullName>
        <description>The default field values for a Batch in Gift Entry. Do not edit directly. This should be updated in the UI where you edit your Batch.</description>
        <inlineHelpText>The default field values for a Batch in Gift Entry. Do not edit directly. This should be updated in the UI where you edit your Batch.</inlineHelpText>
        <label>Batch Defaults</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Batch_Description__c</fullName>
        <inlineHelpText>An optional description about this batch.</inlineHelpText>
        <label>Batch Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Batch_Gift_Entry_Version__c</fullName>
        <description>The version of the Batch Gift Entry feature used to create this Batch.</description>
        <inlineHelpText>The version of the Batch Gift Entry feature used to create this Batch.</inlineHelpText>
        <label>Batch Gift Entry Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Batch_Number__c</fullName>
        <description>The unique, auto-numbered identifier for this batch.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique, auto-numbered identifier for this batch.</inlineHelpText>
        <label>Batch Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Batch_Process_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <description>The number of NPSP Data Import records to process at a time in each batch.</description>
        <inlineHelpText>The number of records to process at a time in each batch.</inlineHelpText>
        <label>Batch Process Size</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Batch_Status__c</fullName>
        <description>The Batch Status is based on the Import Status of the NPSP Data Import records within the batch. If one record fails to import, the status for the batch is &quot;Failed - Needs Review.&quot;</description>
        <inlineHelpText>The Batch Status is based on the Import Status of the NPSP Data Import records within the batch. If one record fails to import, the status for the batch is &quot;Failed - Needs Review.&quot;</inlineHelpText>
        <label>Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed - Needs Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Batch_Table_Columns__c</fullName>
        <description>List of API names for fields included in the batch gift table. Stored as JSON.</description>
        <inlineHelpText>List of API names for fields included in the batch gift table. Stored as JSON.</inlineHelpText>
        <label>Batch Table Columns</label>
        <length>55000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Contact_Custom_Unique_ID__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>An optional Unique Id field to use for Contact matching</description>
        <inlineHelpText>An optional Unique Id field to use for Contact matching</inlineHelpText>
        <label>Contact Custom Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Contact_Matching_Rule__c</fullName>
        <defaultValue>&quot;Firstname,Lastname,Email&quot;</defaultValue>
        <description>Specifies how Contacts in Data Import records are matched to existing Contacts. Contact Duplicate Rules runs all active Duplicate Rules for the Contact object to find the best match. Duplicate Rules are managed in Setup | Duplicate Management.</description>
        <inlineHelpText>Specifies how Contacts in Data Import records are matched to existing Contacts. Contact Duplicate Rules runs all active Duplicate Rules for the Contact object to find the best match. Duplicate Rules are managed in Setup | Duplicate Management.</inlineHelpText>
        <label>Contact Matching Rule</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Date_Range__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Enter the number of days from the Donation Date to consider when looking for a matching Opportunity or Payment. The Data Importer will choose the matching Opp or Payment whose date falls within the number of days AND is closest to the Donation Date.</description>
        <inlineHelpText>Enter the number of days from the Donation Date to consider when looking for a matching Opportunity or Payment. NPSP will choose the matching Opp or Payment whose date falls within the number of days AND is closest to the Donation Date.</inlineHelpText>
        <label>Number of Days from Donation Date</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Matching_Behavior__c</fullName>
        <defaultValue>&quot;Do Not Match&quot;</defaultValue>
        <description>Defines how the Data Importer should handle matching Donations. You must choose a value.</description>
        <inlineHelpText>Defines how NPSP should handle matching Donations.</inlineHelpText>
        <label>Donation Matching Behavior</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Match</fullName>
                </value>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Single Match</fullName>
                </value>
                <value>
                    <fullName>Single Match or Create</fullName>
                </value>
                <value>
                    <fullName>Best Match</fullName>
                </value>
                <value>
                    <fullName>Best Match or Create</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Donation_Matching_Implementing_Class__c</fullName>
        <description>The developer name of an Apex class that implements the BDI_IMatching interface for Donations. Leave blank to let NPSP handle matching.</description>
        <inlineHelpText>The developer name of an Apex class that implements the BDI_IMatching interface for Donations. Leave blank to let NPSP handle matching.</inlineHelpText>
        <label>Donation Matching Implementing Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Matching_Rule__c</fullName>
        <defaultValue>&quot;npsp__Donation_Amount__c;npsp__Donation_Date__c&quot;</defaultValue>
        <description>Specifies which fields to match by when trying to match Donations in Data Import records against existing Opportunities and Payments. Control or Command click to select more than one field.</description>
        <inlineHelpText>Specifies which fields to match by when trying to match Donations in batch records against existing Opportunities and Payments.</inlineHelpText>
        <label>Donation Matching Rule</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Expected_Count_of_Gifts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of gifts that are expected to be entered in this Batch.</description>
        <inlineHelpText>The number of gifts that are expected to be entered in this Batch.</inlineHelpText>
        <label>Expected Count of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Expected_Total_Batch_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The expected total amount of all gifts entered in this Batch.</description>
        <inlineHelpText>The expected total amount of all gifts entered in this Batch.</inlineHelpText>
        <label>Expected Total Batch Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Form_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Template to use for the gift entry form for this Batch.</description>
        <inlineHelpText>The Template to use for the gift entry form for this Batch.</inlineHelpText>
        <label>Form Template</label>
        <referenceTo>npsp__Form_Template__c</referenceTo>
        <relationshipLabel>NPSP Data Import Batches</relationshipLabel>
        <relationshipName>NPSP_Data_Import_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__GiftBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is set during batch creation to use the gift entry batch feature.</description>
        <inlineHelpText>This batch is intended for use with Batch Gift Entry. Batches are automatically marked as gift batches when they are set up through the Batch Gift Entry tab. Manually changing this field could have unintended consequences.</inlineHelpText>
        <label>Gift Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Processed_On__c</fullName>
        <description>The date and time when the batch was last processed.</description>
        <inlineHelpText>The date and time when the batch was last processed.</inlineHelpText>
        <label>Last Processed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npsp__Latest_Apex_Job_Id__c</fullName>
        <description>The latest Apex Job Id for this NPSP Data Import Batch record.</description>
        <label>Latest Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Post_Process_Implementing_Class__c</fullName>
        <description>The developer name of an Apex class that implements the BDI_IPostProcess interface for NPSP Data Import records.</description>
        <inlineHelpText>The developer name of an Apex class that implements the BDI_IPostProcess interface for NPSP batch records.</inlineHelpText>
        <label>Post Process Implementing Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Process_Using_Scheduled_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the NPSP Data Import Batch will be automatically processed based on the schedule for the associated job.</description>
        <inlineHelpText>When checked, the batch will be automatically processed based on the schedule for the associated job.</inlineHelpText>
        <label>Process Using Scheduled Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Records_Failed__c</fullName>
        <description>Shows the number of records that failed to be successfully processed on the date listed in the Last Processed On field.</description>
        <inlineHelpText>Shows the number of records that failed to be successfully processed on the date listed in the Last Processed On field.</inlineHelpText>
        <label>Records Failed</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Records_Successfully_Processed__c</fullName>
        <description>Shows the number of records that were successfully processed on the date listed in the Last Processed On field.</description>
        <inlineHelpText>Shows the number of records that were successfully processed on the date listed in the Last Processed On field.</inlineHelpText>
        <label>Records Successfully Processed</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__RequireTotalMatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the total number of gifts and total amount must match the expected totals entered for the batch.</description>
        <inlineHelpText>When checked, the total number of gifts and total amount must match the expected totals entered for the batch.</inlineHelpText>
        <label>Require Expected Totals Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Run_Opportunity_Rollups_while_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, NPSP calculates donor statistics when donations are processed. If unchecked, donor statistics are calculated during the default nightly Scheduled Job. Note that selecting this checkbox may slow down processing of this batch.</description>
        <inlineHelpText>When checked, NPSP calculates donor rollups when donations are processed. If unchecked, donor rollups are calculated during the default nightly Scheduled Job. Note that selecting this checkbox may slow down processing of this batch.</inlineHelpText>
        <label>Calculate Donation Rollups with Batch</label>
        <type>Checkbox</type>
    </fields>
    <label>NPSP Data Import Batch</label>
    <listViews>
        <fullName>npsp__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>npsp__Batch_Description__c</columns>
        <columns>npsp__GiftBatch__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>npsp__Gift_Batches</fullName>
        <columns>NAME</columns>
        <columns>npsp__Batch_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__GiftBatch__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Gift Batches</label>
    </listViews>
    <nameField>
        <label>Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPSP Data Import Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>